--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "dependencies": {
     "abbrev": "^1.1.1",
     "agent-base": "^6.0.2",
-    "agentkeepalive": "^4.2.1",
     "aggregate-error": "^3.1.0",
+    "agentkeepalive": "^4.2.1",
     "ajv": "^6.12.6",
     "ansi-align": "^3.0.1",
     "ansi-regex": "^5.0.1",
@@ -15,27 +15,27 @@
     "anymatch": "^3.1.2",
     "aproba": "^2.0.0",
     "are-we-there-yet": "^2.0.0",
-    "arrify": "^1.0.1",
     "asn1": "^0.2.6",
+    "arrify": "^1.0.1",
     "assert-plus": "^1.0.0",
-    "async-foreach": "^0.1.3",
-    "asynckit": "^0.4.0",
     "aws-sign2": "^0.7.0",
+    "asynckit": "^0.4.0",
+    "async-foreach": "^0.1.3",
     "aws4": "^1.11.0",
     "balanced-match": "^1.0.2",
     "bcrypt-pbkdf": "^1.0.2",
     "binary-extensions": "^2.2.0",
-    "boxen": "^5.1.2",
     "brace-expansion": "^1.1.11",
+    "boxen": "^5.1.2",
     "braces": "^3.0.2",
     "cacache": "^15.3.0",
     "cacheable-request": "^6.1.0",
     "camelcase": "^5.3.1",
     "camelcase-keys": "^6.2.2",
     "caseless": "^0.12.0",
+    "chownr": "^2.0.0",
     "chalk": "^4.1.2",
     "chokidar": "^3.5.3",
-    "chownr": "^2.0.0",
     "ci-info": "^2.0.0",
     "clean-stack": "^2.2.0",
     "cli-boxes": "^2.2.1",
@@ -49,9 +49,9 @@
     "configstore": "^5.0.1",
     "console-control-strings": "^1.1.0",
     "core-util-is": "^1.0.2",
-    "cross-spawn": "^7.0.3",
-    "crypto-random-string": "^2.0.0",
     "dashdash": "^1.14.1",
+    "crypto-random-string": "^2.0.0",
+    "cross-spawn": "^7.0.3",
     "debug": "^4.3.4",
     "decamelize": "^1.2.0",
     "decamelize-keys": "^1.1.0",
@@ -68,9 +68,9 @@
     "encoding": "^0.1.13",
     "end-of-stream": "^1.4.4",
     "env-paths": "^2.2.1",
+    "escalade": "^3.1.1",
     "err-code": "^2.0.3",
     "error-ex": "^1.3.2",
-    "escalade": "^3.1.1",
     "escape-goat": "^2.1.1",
     "escape-string-regexp": "^1.0.5",
     "extend": "^3.0.2",
@@ -84,26 +84,26 @@
     "fs-minipass": "^2.1.0",
     "fs.realpath": "^1.0.0",
     "function-bind": "^1.1.1",
-    "gauge": "^3.0.2",
-    "gaze": "^1.1.3",
     "get-caller-file": "^2.0.5",
-    "get-stdin": "^4.0.1",
+    "gaze": "^1.1.3",
+    "gauge": "^3.0.2",
     "get-stream": "^4.1.0",
+    "get-stdin": "^4.0.1",
     "getpass": "^0.1.7",
     "glob": "^7.2.3",
     "glob-parent": "^5.1.2",
     "global-dirs": "^3.0.0",
     "globule": "^1.3.3",
     "got": "^9.6.0",
-    "graceful-fs": "^4.2.10",
-    "har-schema": "^2.0.0",
     "har-validator": "^5.1.5",
+    "har-schema": "^2.0.0",
+    "graceful-fs": "^4.2.10",
     "hard-rejection": "^2.1.0",
-    "has": "^1.0.3",
     "has-flag": "^4.0.0",
+    "has": "^1.0.3",
     "has-unicode": "^2.0.1",
-    "has-yarn": "^2.1.0",
     "hosted-git-info": "^4.1.0",
+    "has-yarn": "^2.1.0",
     "http-cache-semantics": "^4.1.0",
     "http-proxy-agent": "^4.0.1",
     "http-signature": "^1.2.0",
@@ -118,8 +118,8 @@
     "inflight": "^1.0.6",
     "inherits": "^2.0.4",
     "ini": "^2.0.0",
-    "ip": "^1.1.8",
     "is-arrayish": "^0.2.1",
+    "ip": "^1.1.8",
     "is-binary-path": "^2.1.0",
     "is-ci": "^2.0.0",
     "is-core-module": "^2.9.0",
@@ -132,9 +132,9 @@
     "is-number": "^7.0.0",
     "is-obj": "^2.0.0",
     "is-path-inside": "^3.0.3",
+    "is-yarn-global": "^0.3.0",
     "is-plain-obj": "^1.1.0",
     "is-typedarray": "^1.0.0",
-    "is-yarn-global": "^0.3.0",
     "isarray": "^1.0.0",
     "isexe": "^2.0.0",
     "isstream": "^0.1.2",
@@ -145,8 +145,8 @@
     "json-parse-even-better-errors": "^2.3.1",
     "json-schema": "^0.4.0",
     "json-schema-traverse": "^0.4.1",
-    "json-stringify-safe": "^5.0.1",
     "jsprim": "^1.4.2",
+    "json-stringify-safe": "^5.0.1",
     "keyv": "^3.1.0",
     "kind-of": "^6.0.3",
     "latest-version": "^5.1.0",
@@ -163,9 +163,9 @@
     "mime-types": "^2.1.35",
     "mimic-response": "^1.0.1",
     "min-indent": "^1.0.1",
+    "minimist-options": "^4.1.0",
     "minimatch": "^3.1.2",
     "minimist": "^1.2.6",
-    "minimist-options": "^4.1.0",
     "minipass": "^3.1.6",
     "minipass-collect": "^1.0.2",
     "minipass-fetch": "^1.4.1",
@@ -178,11 +178,13 @@
     "nan": "^2.16.0",
     "negotiator": "^0.6.3",
     "node-gyp": "^8.4.1",
-    "nopt": "^5.0.0",
+    "node-sass": "^7.0.1",
     "normalize-package-data": "^3.0.3",
+    "nopt": "^5.0.0",
+    "nodemon": "^2.0.16",
     "normalize-path": "^3.0.0",
-    "normalize-url": "^4.5.1",
     "npmlog": "^5.0.1",
+    "normalize-url": "^4.5.1",
     "oauth-sign": "^0.9.0",
     "object-assign": "^4.1.1",
     "once": "^1.4.0",
@@ -190,17 +192,17 @@
     "p-limit": "^2.3.0",
     "p-locate": "^4.1.0",
     "p-map": "^4.0.0",
-    "p-try": "^2.2.0",
     "package-json": "^6.5.0",
-    "parse-json": "^5.2.0",
+    "p-try": "^2.2.0",
     "path-exists": "^4.0.0",
+    "parse-json": "^5.2.0",
     "path-is-absolute": "^1.0.1",
     "path-key": "^3.1.1",
     "path-parse": "^1.0.7",
     "performance-now": "^2.1.0",
     "picomatch": "^2.3.1",
-    "prepend-http": "^2.0.0",
     "process-nextick-args": "^2.0.1",
+    "prepend-http": "^2.0.0",
     "promise-inflight": "^1.0.1",
     "promise-retry": "^2.0.1",
     "psl": "^1.8.0",
@@ -224,8 +226,8 @@
     "responselike": "^1.0.2",
     "retry": "^0.12.0",
     "rimraf": "^3.0.2",
-    "safe-buffer": "^5.2.1",
     "safer-buffer": "^2.1.2",
+    "safe-buffer": "^5.2.1",
     "sass-graph": "^4.0.0",
     "scss-tokenizer": "^0.3.0",
     "semver": "^7.3.7",
@@ -236,8 +238,8 @@
     "signal-exit": "^3.0.7",
     "smart-buffer": "^4.2.0",
     "socks": "^2.6.2",
-    "socks-proxy-agent": "^6.2.1",
     "source-map": "^0.7.4",
+    "socks-proxy-agent": "^6.2.1",
     "spdx-correct": "^3.1.1",
     "spdx-exceptions": "^2.3.0",
     "spdx-expression-parse": "^3.0.1",
@@ -245,8 +247,8 @@
     "sshpk": "^1.17.0",
     "ssri": "^8.0.1",
     "stdout-stream": "^1.4.1",
-    "string_decoder": "^1.3.0",
     "string-width": "^4.2.3",
+    "string_decoder": "^1.3.0",
     "strip-ansi": "^6.0.1",
     "strip-indent": "^3.0.0",
     "strip-json-comments": "^2.0.1",
@@ -262,12 +264,12 @@
     "tunnel-agent": "^0.6.0",
     "tweetnacl": "^0.14.5",
     "type-fest": "^0.18.1",
-    "typedarray-to-buffer": "^3.1.5",
-    "undefsafe": "^2.0.5",
     "unique-filename": "^1.1.1",
+    "undefsafe": "^2.0.5",
+    "typedarray-to-buffer": "^3.1.5",
     "unique-slug": "^2.0.2",
-    "unique-string": "^2.0.0",
     "update-notifier": "^5.1.0",
+    "unique-string": "^2.0.0",
     "uri-js": "^4.4.1",
     "url-parse-lax": "^3.0.0",
     "util-deprecate": "^1.0.2",
@@ -286,13 +288,10 @@
     "yargs": "^17.5.1",
     "yargs-parser": "^20.2.9"
   },
-  "devDependencies": {
-    "node-sass": "^7.0.1",
-    "nodemon": "^2.0.16"
-  },
+  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build-css": "node-sass --include-path scss scss/main.scss css/Estilo.css",
+    "build-css": "node-sass --include-path scss sass/main.scss css/Estilo.css",
     "watch-css": "nodemon -e scss -x \"npm run build-css\""
   },
   "author": "",
